fixes responsiveness issues on smaller screens

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -549,9 +549,9 @@ video {
   background-color: rgba(40, 44, 52, var(--tw-bg-opacity));
 }
 
-.bg-secondary-300 {
+.bg-dark-600 {
   --tw-bg-opacity: 1;
-  background-color: rgba(235, 168, 142, var(--tw-bg-opacity));
+  background-color: rgba(32, 35, 42, var(--tw-bg-opacity));
 }
 
 .bg-secondary-500 {
@@ -581,6 +581,10 @@ video {
 
 .table {
   display: table;
+}
+
+.grid {
+  display: grid;
 }
 
 .flex-row {
@@ -684,19 +688,19 @@ video {
   line-height: 1;
 }
 
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
-
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 .my-4 {
@@ -831,11 +835,6 @@ video {
   color: rgba(32, 35, 42, var(--tw-text-opacity));
 }
 
-.text-dark-900 {
-  --tw-text-opacity: 1;
-  color: rgba(8, 9, 10, var(--tw-text-opacity));
-}
-
 .text-secondary-500 {
   --tw-text-opacity: 1;
   color: rgba(221, 110, 66, var(--tw-text-opacity));
@@ -856,10 +855,6 @@ video {
 
 .w-1\/3 {
   width: 33.333333%;
-}
-
-.w-1\/4 {
-  width: 25%;
 }
 
 .w-full {
@@ -939,7 +934,6 @@ body {
   background-color: #282c34;
   color: white;
   min-height: 100vh;
-  min-width: 100vw;
 }
 
 .submit-button {
@@ -1040,16 +1034,6 @@ body {
     justify-content: flex-start;
   }
 
-  .sm\:mx-2 {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-  }
-
-  .sm\:my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
-  }
-
   .sm\:mx-4 {
     margin-left: 1rem;
     margin-right: 1rem;
@@ -1090,12 +1074,26 @@ body {
 }
 
 @media (min-width: 768px) {
+  .md\:my-6 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .md\:mb-0 {
     margin-bottom: 0px;
   }
 
   .md\:w-1\/4 {
     width: 25%;
+  }
+
+  .md\:w-2\/5 {
+    width: 40%;
   }
 }
 
@@ -1109,11 +1107,6 @@ body {
     line-height: 1.75rem;
   }
 
-  .lg\:mx-6 {
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-  }
-
   .lg\:my-10 {
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
@@ -1122,6 +1115,10 @@ body {
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
