--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -18,7 +18,6 @@ body {
   background-color: #282c34;
   color: white;
   min-height: 100vh;
-  min-width: 100vw;
 }
 
 .submit-button {
